tests/punct.cproc
// comment
{}{}<::>
(/* // */)

u8"hi"
U"\x01234567"
u"\x0123" // accept
u8"\x0123" // reject
"\x01"
"\"\\"
"\0hi" // length: 3
"\008" // length: 2
"\012" // length: 1

"\u00A0"

hi_2 2 0x2 02 hi
012345678
if
\u0068
\U00000068
\U0000 // error
